removing font size by 1px to avoid address line is misaligned in footer section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1388,7 +1388,7 @@ dt {
 }
 .cta-text span {
 	color: #757575;
-	font-size: 15px;
+	font-size: 14px;
 }
 .footer-content {
 	position: relative;
